# Gemeo_digital_MJV

install/: local_setup.sh  setup.sh
install/carrinho_sdf_pkg/lib/carrinho_sdf_pkg/: mover_carrinho  mover_carrinho.py
install/carrinho_sdf_pkg/share/carrinho_sdf_pkg/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/carrinho_sdf_pkg/share/carrinho_sdf_pkg/launch/: sim.launch.py
install/carrinho_sdf_pkg/share/carrinho_sdf_pkg/models/carrinho_sdf/: model.config  model.sdf
install/carrinho_sdf_pkg/share/carrinho_sdf_pkg/worlds/: meu_mundo.world
log/: latest_build  latest_list
src/carrinho_sdf_pkg/: package.xml  setup.cfg  setup.py
src/carrinho_sdf_pkg/launch/: sim.launch.py
src/carrinho_sdf_pkg/models/carrinho_sdf/: model.sdf
src/carrinho_sdf_pkg/models/carrinho_sdf/meshes/: Mascara.STL  Roda_Houverboard.STL
src/carrinho_sdf_pkg/worlds/: meu_mundo.world
